force-app/main/default/objects/Apttus_Config2__RevenueSplitPolicyEntry__c/Apttus_Config2__RevenueSplitPolicyEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in a revenue split policy</description>
    <label>Revenue Split Policy Entry</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Policy Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Split Policy Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>