force-app/main/default/objects/Apttus_Config2__RevenueSplitPolicyEntry__c/fields/Apttus_Config2__DRAccountRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DRAccountRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the deferred revenue account rule</description>
    <inlineHelpText>ID of the deferred revenue account rule</inlineHelpText>
    <label>Deferred Revenue Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
            <operation>equals</operation>
            <value>Deferred Revenue Account</value>
        </filterItems>
        <infoMessage>Please select a Deferred Revenue Account Rule</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
    <relationshipLabel>Revenue Split Policy Entries (Deferred Revenue Account)</relationshipLabel>
    <relationshipName>RevenueSplitPolicyEntriesDR</relationshipName>
    <type>Lookup</type>
</CustomField>