force-app/main/default/objects/Apttus_Config2__RevenueSplitPolicyEntry__c/fields/Apttus_Config2__RevRecPolicyId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RevRecPolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the revenue recognition policy for the product or service</description>
    <inlineHelpText>ID of the revenue recognition policy for the product or service</inlineHelpText>
    <label>Revenue Recognition Policy</label>
    <referenceTo>Apttus_Config2__RevRecPolicy__c</referenceTo>
    <relationshipLabel>Revenue Split Policy Entries</relationshipLabel>
    <relationshipName>RevenueSplitPolicyEntries</relationshipName>
    <type>Lookup</type>
</CustomField>