force-app/main/default/objects/Apttus_Config2__RevenueSplitPolicyEntry__c/fields/Apttus_Config2__SplitPercent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SplitPercent__c</fullName>
    <description>The revenue split percentage</description>
    <inlineHelpText>The revenue split percentage</inlineHelpText>
    <label>Split Percent</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>