force-app/main/default/objects/Apttus_Config2__RevenueSplitPolicyEntry__c/fields/Apttus_Config2__SplitPolicyId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SplitPolicyId__c</fullName>
    <description>ID of the associated revenue split policy</description>
    <inlineHelpText>ID of the associated revenue split policy</inlineHelpText>
    <label>Split Policy</label>
    <referenceTo>Apttus_Config2__RevenueSplitPolicy__c</referenceTo>
    <relationshipLabel>Split Policy Entries</relationshipLabel>
    <relationshipName>SplitPolicyEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>